--- a/app/src/main/res/layout/activity_notes.xml
+++ b/app/src/main/res/layout/activity_notes.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         >
         <Spinner
-            android:id="@+id/note_select"
+            android:id="@+id/note_spinner"
             android:layout_weight="0.3"
             android:background="@color/colorPrimary"
             android:layout_marginTop="15dp"
@@ -43,7 +43,15 @@
         android:layout_marginBottom="10dp"
         android:background="@color/colorAccent">
 
-        <TextView
+        <EditText
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:id="@+id/note_select"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </EditText>
+        <EditText
             android:layout_weight="0.7"
             android:layout_margin="30dp"
             android:background="#FFFFFF"
@@ -52,7 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        </TextView>
+        </EditText>
 
         <LinearLayout
             android:orientation="horizontal"
