--- a/app/src/main/res/layout/activity_download.xml
+++ b/app/src/main/res/layout/activity_download.xml
@@ -38,12 +38,22 @@
 
     <Switch
         android:layout_margin="30dp"
+        android:textSize="25sp"
         android:text="Alarm    "
         android:layout_gravity="center"
         android:id="@+id/startAlarmBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
     </Switch>
+
+    <TextView
+        android:layout_gravity="center"
+        android:textSize="20sp"
+        android:id="@+id/alarm_clock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+    </TextView>
 
 
 </LinearLayout>
